# real-time-data-pipeline-with-ai-anomaly-detection

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  logging_config.py  main.py
backend/app/ml/: model.py  train.py
backend/app/pipeline/: consumer.py  detector.py  producer.py
backend/app/ws/: manager.py
backend/tests/: test_pipeline.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  types.ts
frontend/src/components/: AnomalyTable.tsx  MetricsChart.tsx  StatsCard.tsx
frontend/src/hooks/: useWebSocket.ts
