[project]
name = "real-time-data-pipeline-with-ai-anomaly-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "Alireza Aliabadi"}
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi (>=0.138.0,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "redis (>=8.0.0,<9.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "numpy (>=2.5.0,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "websockets (>=16.0,<17.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.4.1,<3.0.0"]
build-backend = "poetry.core.masonry.api"
